2005-09-27  Tom Tromey  <tromey@redhat.com>

	* java/util/logging/LogManager.java (loggers): Genericized type.
	(LogManager): Updated.
	(addLogger): Likewise.
	(findAncestor): Likewise.
	(getLogger): Likewise.
	(getLoggerNames): Fixed return type.
	(reset): Updated.

2005-09-27  Tom Tromey  <tromey@redhat.com>

	* java/util/zip/ZipFile.java (entries): Updated return type.
	(ZipEntryEnumeration): Updated 'implements' type.
	(entries): Updated type.
	(ZipEntryEnumeration.elements): Likewise.
	(readEntries): Updated.
	(getEntries): Likewise.
	(getEntry): Likewise.
	(getInputStream): Likewise.

2005-09-27  Tom Tromey  <tromey@redhat.com>

	* java/lang/Compiler.java (compileClass): Updated argument type.

2005-09-27  Tom Tromey  <tromey@redhat.com>

	* java/awt/im/InputMethodHighlight.java (InputMethodHighlight):
	Updated argument types.
	(getStyle): Updated return type.
	* java/awt/MenuBar.java (shortcuts): Updated return type.
	* java/awt/Window.java (hide): Now deprecated.
	(show): Likewise.

2005-09-27  Tom Tromey  <tromey@redhat.com>

	* java/lang/String.java (CASE_INSENSITIVE_ORDER): Now a
	Comparator<String>.
	(CaseInsensitiveComparator): Updated.
	(CaseInsensitiveComparator.compare): Changed argument types.

2005-09-26  Tom Tromey  <tromey@redhat.com>

	* java/util/Formatter.java (format): Set fmtLocale.
	(applyLocalization): New method.
	(basicIntegralConversion): Likewise.
	(hexOrOctalConversion): Use it.
	(decimalConversion): New method.
	(format): Use decimalConversion, dateTimeConversion.
	(genericFormat): Upper-case earlier.  Justify correctly.
	(singleDateTimeConversion): New method.
	(dateTimeConversion): Likewise.

2005-09-25  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/java/lang/reflect/ClassSignatureParser.java,
	gnu/java/lang/reflect/GenericSignatureParser.java,
	gnu/java/lang/reflect/MethodSignatureParser.java: New files.
	* java/lang/Class.java
	(constructor): Changed type to generic type.
	(cast, getEnumConstants): Added cast.